--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,19 @@
 #map {
   height: 90%;
   z-index: 1;
-  flex:1;
 }
 .container{
   display: flex;
-  height: 100vh;
+  flex:1;
   flex-direction: column;
-  flex-grow: 1;
   box-sizing: border-box;
   min-height: 100vh;
+  justify-content:space-evenly;
 }
 .map_container{
   height:95vh;
   min-height: 50vh;
   flex-grow: 1;
-  justify-content:space-evenly;
-  box-sizing: border-box;
   flex-shrink: 1;
 }
 
@@ -25,7 +22,6 @@
   width:100%;
   display: inline-flex;
   flex:auto;
-  box-sizing: border-box;
   flex-direction : row;
   justify-content:space-evenly;
   flex-shrink: 2;
@@ -42,27 +38,32 @@ ul {
   flex-basis: 25%;
   flex:auto;
   z-index:1;
+  flex-shrink: 2;
 }
 #legend_table>li, #legend_table>input,#legend_table>label {
   display: block;
   flex: 1 auto; /* Default */
   list-style-type: none;
   background: #fafafa;
-  /* flex-shrink: 2; */
+  flex-shrink: 2;
   z-index: 1;
   position: relative;
 }
 .footer {
-  left: 0;
+  /* left: 0;
+  margin:auto;
   bottom: 0;
   width: 100%;
   background-color: white;
   color: black;
   text-align: center;
-  box-sizing: border-box;
+  
   flex:1 auto;
   z-index: 1;
-  /* border: 3px solid black; */
+  border: 3px solid black; */
+  flex:1;
+  margin:auto;
+  /* flex-shrink: 3; */
 
 }
 *{box-sizing: border-box;}
@@ -79,7 +80,7 @@ ul {
   width:100%;
   flex:1 auto;
   flex-grow: 1;
-  flex-shrink: 2;
+  flex-shrink: 1;
   box-sizing: border-box;
 }
 
@@ -89,7 +90,11 @@ html,
 body {
   width: 100%;
   height: 100vh;
+  min-height: 100vh;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  
 }
 
 #infoBox {
@@ -113,6 +118,9 @@ body {
   margin: 0 auto;
 }
 
+.invisible{
+  display: none;
+}
 
 img {
   display: block;
@@ -193,8 +201,35 @@ input[type=checkbox] {
   display: none;
 }
 
+@media (max-height:500px)
+{
+  .footer
+  {
+    visibility: hidden;
+  }
+  .map_container{
+    height:100vh;
+}
+}
+
+
 @media screen and (max-width: 750px) {
   
+  .invisible{
+    display: none;
+  }
+  
+  .footer
+  {
+    visibility: hidden;
+    display: none;
+  }
+  .map_container
+  {
+    height: 100vh;
+  }
+  #map{height: 100%
+  }
   #legend {
     visibility: hidden;
     clear: both;
@@ -205,7 +240,12 @@ input[type=checkbox] {
     
   }
   #legend_table{
-    margin: auto
+    margin: auto;
+    border:3px black;
+    display:flex;
+    flex-direction: column;
+    justify-content: center
+
   }
 
   #legend #submitLegend {
@@ -214,14 +254,13 @@ input[type=checkbox] {
     margin: auto;
   }
 
+
   #legend_button {
     position: absolute;
     font-size: 5vw;
     visibility: visible;
-    display: inline;
-    z-index: 2;
-
-
+    display: flex;
+    width: 100%;
   }
 
   #infoBox {
