--- a/css/main.css
+++ b/css/main.css
@@ -2,86 +2,57 @@
   height: 90%;
   z-index: 1;
 }
-.container{
-  display: flex;
-  flex:1;
-  flex-direction: column;
-  box-sizing: border-box;
-  min-height: 100vh;
-  justify-content:space-evenly;
-}
-.map_container{
-  height:95vh;
+
+.map_container {
+  height: 95vh;
   min-height: 50vh;
   flex-grow: 1;
   flex-shrink: 1;
+  
 }
 
 #legend_table{
-  overflow:hidden;
-  width:100%;
-  display: inline-flex;
-  flex:auto;
-  flex-direction : row;
-  justify-content:space-evenly;
-  flex-shrink: 2;
-  flex-grow: 2;
-  
+display: flex;
 }
+
+li {
+  display: flex;
+  flex:auto;
+}
+
 ul {
   display: flex;
-  align-items: stretch; /* Default */
+  align-items: stretch;
+  /* Default */
   justify-content: space-between;
   width: 100%;
   margin: 0;
   padding: 0;
   flex-basis: 25%;
-  flex:auto;
-  z-index:1;
+  flex: auto;
+  z-index: 1;
   flex-shrink: 2;
 }
-#legend_table>li, #legend_table>input,#legend_table>label {
-  display: block;
-  flex: 1 auto; /* Default */
-  list-style-type: none;
-  background: #fafafa;
-  flex-shrink: 2;
-  z-index: 1;
-  position: relative;
-}
-.footer {
-  /* left: 0;
-  margin:auto;
-  bottom: 0;
-  width: 100%;
-  background-color: white;
-  color: black;
-  text-align: center;
-  
-  flex:1 auto;
-  z-index: 1;
-  border: 3px solid black; */
-  flex:1;
-  margin:auto;
-  /* flex-shrink: 3; */
 
+* {
+  box-sizing: border-box;
 }
-*{box-sizing: border-box;}
 
 #legend {
   z-index: 2;
   background-color: #fff;
   padding: 5px;
-  border: 1px solid #999;
+  /* border: 1px solid #999; */
   /* border: 1px solid black; */
   text-align: left;
   font-family: 'Roboto', 'sans-serif';
   line-height: 30px;
-  width:100%;
-  flex:1 auto;
+  width: 100%;
+  flex: 1 auto;
   flex-grow: 1;
   flex-shrink: 1;
   box-sizing: border-box;
+  visibility: visible;
 }
 
 
@@ -91,10 +62,7 @@ body {
   width: 100%;
   height: 100vh;
   min-height: 100vh;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  
+
 }
 
 #infoBox {
@@ -103,7 +71,7 @@ body {
   align-content: flex-start;
   flex-wrap: nowrap;
   max-height: 70vh;
-  flex:1;
+  flex: 1;
   /* max-width: -moz-min-content; */
 
 }
@@ -118,7 +86,7 @@ body {
   margin: 0 auto;
 }
 
-.invisible{
+.invisible {
   display: none;
 }
 
@@ -133,21 +101,11 @@ img {
   height: auto;
   width: auto\9;
   /* ie8 */
+  height: max-content;
 }
-
-.boxContent {
-  text-align: middle;
-  width: 50%;
-  max-height: 100vh;
-  margin: 5px;
-  color: black;
-  flex: 1;
-  display: flex-box;
-}
-
 .popupText {
   text-align: center;
-  margin-top: 5%;
+  /* margin-top: 5%; */
 }
 
 .header {
@@ -160,33 +118,27 @@ img {
 }
 
 #legend_table ul {
- display: flex;
-justify-content: space-around;
-/*  border: 2px solid black; */
-padding:0;
-  
+  display: flex;
+  flex: 1;
+  justify-content: space-around;
+  /*  border: 2px solid black; */
+  padding: 0;
+
 }
 
-#legend_table li {
-  float: left;
-  text-align: left;
-  /* border: 2px solid red; */
-  list-style-type: none;
-  width: 50%;
-  
-}
-#legend_table label{
+
+#legend_table label {
   display: block;
   text-align: center;
   /* outline: 1px solid blue; */
-  
+
 }
 
 input[type=checkbox] {
   /* outline: 1px solid red; */
   width: auto;
   transform: scale(2);
-  margin: auto 50% auto;
+  float: left;
 }
 
 #legend_button {
@@ -201,58 +153,58 @@ input[type=checkbox] {
   display: none;
 }
 
-@media (max-height:500px)
-{
-  .footer
-  {
+@media (max-height:500px) {
+  .footer {
     visibility: hidden;
   }
-  .map_container{
-    height:100vh;
-}
-}
 
-
-@media screen and (max-width: 750px) {
-  
-  .invisible{
-    display: none;
-  }
-  
-  .footer
-  {
-    visibility: hidden;
-    display: none;
-  }
-  .map_container
-  {
+  .map_container {
     height: 100vh;
   }
-  #map{height: 100%
+}
+
+
+@media screen and (max-width: 760px) {
+
+  .invisible {
+    display: none;
   }
+
+  .footer {
+    visibility: hidden;
+    display: none;
+  }
+
+  .map_container {
+    height: 100vh;
+  }
+
+  #map {
+    height: 100%
+  }
+
   #legend {
     visibility: hidden;
-    clear: both;
-    float: left;
+    /* clear: both; */
+    /* float: left;
     margin: auto;
-    width: 28%;
+    width: 28%; */
     display: none;
-    
+
   }
+
   #legend_table{
     margin: auto;
     border:3px black;
     display:flex;
-    flex-direction: column;
-    justify-content: center
-    max
-
+    flex-direction: column !important;
+    justify-content: center;
   }
 
   #legend #submitLegend {
     visibility: visible;
     display: block;
-    margin: auto;
+    margin-top: 10px;
   }
 
 
@@ -268,18 +220,17 @@ input[type=checkbox] {
     height: 100%;
     width: 100%;
     top: 0;
-    bottom:0 ;
+    bottom: 0;
     display: flex;
     background: white;
     max-width: 100%;
   }
+
   #infoBox figure {
-  height: auto;
-  flex:1
+    height: auto;
+    flex: 1
   }
-  #legend_table ul {
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
-  };
+
+
+  ;
 }
